Rename meta author

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ dependencies: []
 
 galaxy_info:
   role_name: server
-  author: tseho
+  author: sparkklabs
   description: Basic server config & security
   license: "license (MIT)"
   min_ansible_version: 2.4
